[gd_scene load_steps=6 format=2]

[ext_resource path="res://vehicles/vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/ufo.gd" type="Script" id=2]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=3]
[ext_resource path="res://vehicles/meshes/vehicles_ufo.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://sounds/ufo.wav" type="AudioStream" id=5]

[node name="UFO" instance=ExtResource( 1 )]
script = ExtResource( 2 )
points = 1000
level = 3
can_attack = true
chopper = true
attack_rate = 4.0

[node name="Mesh" parent="Origin" index="0"]
mesh = ExtResource( 4 )

[node name="FirePosition" type="Position3D" parent="Origin" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.405668, 0 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 3 )
unit_db = -10.0
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0

[node name="EngineSound" type="AudioStreamPlayer3D" parent="." index="10"]
stream = ExtResource( 5 )
unit_size = 20.0
autoplay = true
bus = "SFX"
